# SubPubC

./: .gitignore  AGENTS.md  Dockerfile  README.md  SubPubC.sln  docker-compose.yml  opencode.json
PubSubLib.Client/: Config.cs  EventMeta.cs  GameObjectTest.cs  IAlive.cs  IPlayerSpeaksClient.cs  IPlayerSpeaksClientModule.cs  IProvider.cs  IProviderWithClient.cs  IPubSubClient.cs  IPubSubClientModule.cs  IRegionClientModule.cs  IRegionClientUnitInternal.cs  IRegionOnCommit.cs  IRegionOnDestroy.cs  IRegionOnStart.cs  IRegionUnit.cs  ISetRegionUnit.cs  IUnit.cs  PlayerSpeaksClient.cs  PlayerSpeaksClientModule.cs  ProviderAbstract.cs  PubSubClient.cs  PubSubClientModule.cs  PubSubLib.Client.asmdef  PubSubLib.Client.csproj  RegionClientModule.cs  TypedUnit.cs  Unit.cs  Vector2.cs  package.json
PubSubLib.Contracts/: IPlayerMirrorClient.cs  MirrorProtoAttribute.cs  MirrorProtoClientAttribute.cs  PubSubLib.Contracts.csproj  PubSubLog.cs  PubSubMessages.proto  UnitMirrorClientAttribute.cs  UnitMirrorServerAttribute.cs  Vector2.cs  Vector3.cs
PubSubLib.Mirror.Generator/: MirrorProtoClientGenerator.cs  MirrorProtoGenerator.cs  PubSubLib.Mirror.Generator.csproj  UnitMirrorClientGenerator.cs  UnitMirrorGenerator.cs
PubSubLib.Router/: IPlayerSpeaksNatifyClient.cs  IPlayerSpeaksRouterModule.cs  IPubSubNatifyClient.cs  IPubSubRouterModule.cs  IRegionNatifyClient.cs  IRegionRouterModule.cs  PlayerSpeaksNatifyClient.cs  PlayerSpeaksRouterModule.cs  (+5 more)
SubPubRust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
SubPubRust/src/: cell.rs  grid.rs  main.rs  unit.rs  watcher.rs
(+197 files in other folders)
